# rustils

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml
crates/coreutils/: Cargo.toml
crates/coreutils/src/: cat.rs  lib.rs  ls.rs  term_report.rs
crates/platform/: Cargo.toml
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: fs.rs  lib.rs  net.rs  process.rs  pty.rs  security.rs  signals.rs  term.rs  tun.rs
crates/platform-linux/src/ffi/: libc_surface.rs  mod.rs
crates/platform-linux/src/sys/: fdio.rs  identity.rs  mod.rs  net.rs  pty.rs  secret_service.rs  security.rs  signals.rs  spawn.rs  termios.rs  tun.rs
crates/platform-linux/src/sys/dbus/: message.rs  mod.rs  transport.rs  value.rs  wire.rs
crates/platform-linux/tests/: dbus_transport.rs  net_nonblocking.rs  net_parity.rs  parity.rs  pty.rs  secret_service.rs  security_parity.rs  security_sandbox.rs  tun_parity.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: lib.rs  net.rs
crates/platform-macos/src/ffi/: libc_surface.rs  mod.rs
crates/platform-macos/src/sys/: fdio.rs  mod.rs  net.rs
crates/platform-macos/tests/: net_nonblocking.rs  net_parity.rs
crates/platform-mock/: Cargo.toml
crates/platform-mock/src/: fs.rs  lib.rs  net.rs  process.rs  pty.rs  security.rs  signals.rs  sync.rs  term.rs  tun.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: fs.rs  lib.rs  net.rs  process.rs  pty.rs  security.rs  signals.rs  term.rs  tun.rs  winargv.rs
crates/platform-windows/src/ffi/: mod.rs  nt_surface.rs  win32_surface.rs
crates/platform-windows/src/sys/: console.rs  csignals.rs  errmap.rs  fileio.rs  handle.rs  mod.rs  net.rs  nt.rs  proc.rs  pty.rs  security.rs
crates/platform-windows/src/util/: mod.rs  wide.rs
crates/platform-windows/tests/: net_nonblocking.rs  net_parity.rs  parity.rs  pty.rs  security_parity.rs  security_sandbox.rs  winargv_oracle.rs
crates/platform/src/: error.rs  events.rs  fs.rs  lib.rs  net.rs  process.rs  pty.rs  security.rs  term.rs  tun.rs
crates/winargv/: Cargo.toml
crates/winargv/src/: lib.rs
docs/: architecture.md  convergence-roadmap.md  coreutils-gap-backlog.md  design-discussion-pty.md  design-discussion-sandbox.md  design-discussion-tls.md  divergences.md  extraction-map.md  r2-hoist-donor.md  rfc-v2.md  versioning.md
docs/behavior/: events.md  fs.md  net.md  process.md  pty.md  security.md  term.md  tun.md
docs/learning/: 001-fdopendir-ownership.md  002-track-p-errno-comes-back-in-the-return-register.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: winargv_roundtrip.rs
