[workspace]
resolver = "2"
members = [
    "crates/platform",
    "crates/platform-mock",
    "crates/platform-linux",
    "crates/platform-windows",
    "crates/coreutils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/baileyrd/rustils"

[workspace.dependencies]
platform = { path = "crates/platform" }
platform-mock = { path = "crates/platform-mock" }
platform-linux = { path = "crates/platform-linux" }
platform-windows = { path = "crates/platform-windows" }
thiserror = "1"
libc = "0.2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[workspace.lints.rust]
unsafe_code = "warn"          # overridden to `forbid` in pure crates; sys/ffi opt in per-crate

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"
