[package]
name = "rustils-fuzz"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
platform = { path = "../crates/platform" }
platform-windows = { path = "../crates/platform-windows" }

[[bin]]
name = "winargv_roundtrip"
path = "fuzz_targets/winargv_roundtrip.rs"
test = true
doc = false

# Standalone workspace: fuzzing needs nightly + libfuzzer and must not
# drag those constraints into the main workspace (which excludes this
# directory).
[workspace]
