[package]
name = "coreutils"
description = "Reference consumer and M1 exercise ground (RFC v2 §3). Not a uutils competitor."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
platform.workspace = true

[dev-dependencies]
platform-mock.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux.workspace = true

[target.'cfg(windows)'.dependencies]
platform-windows.workspace = true

[[bin]]
name = "rcat"
path = "src/bin/rcat.rs"

[[bin]]
name = "rls"
path = "src/bin/rls.rs"

[[bin]]
name = "rrun"
path = "src/bin/rrun.rs"

[[bin]]
name = "rpar"
path = "src/bin/rpar.rs"

[[bin]]
name = "rtee"
path = "src/bin/rtee.rs"

[lints]
workspace = true
