[package]
name = "coreutils"
description = "Reference consumer and M1 exercise ground (RFC v2 §3). Not a uutils competitor."
# Independent of the PAL group's version — see docs/versioning.md §1
# (an internal reference-consumer, not depended on outside this repo)
# and CHANGELOG.md.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
platform.workspace = true

[dev-dependencies]
platform-mock.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux.workspace = true

[target.'cfg(windows)'.dependencies]
platform-windows.workspace = true

[[bin]]
name = "rcat"
path = "src/bin/rcat.rs"

[[bin]]
name = "rls"
path = "src/bin/rls.rs"

[[bin]]
name = "rrun"
path = "src/bin/rrun.rs"

[[bin]]
name = "rpar"
path = "src/bin/rpar.rs"

[[bin]]
name = "rtee"
path = "src/bin/rtee.rs"

[[bin]]
name = "rterm"
path = "src/bin/rterm.rs"

[lints]
workspace = true
