[package]
name = "platform-linux"
description = "Linux backend: libc floor now (RFC v2 §2 D-2); raw-syscall Track P later, feature-gated."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
platform.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
# D-12: rusty_libc is the Track P backend — a pinned git dependency (one
# source of truth, not a vendored fork), replaced into sys/ call-by-call
# behind `track-p`. Bump the rev deliberately; never track a branch.
# rusty_libc's own MSRV is 1.88 (naked-fn sigreturn trampoline), above this
# workspace's 1.75 floor — the feature must stay off on the MSRV CI leg.
rusty_libc = { git = "https://github.com/baileyrd/rusty_libc", rev = "40a8bd1ebbe7a0d6ab602cd13dfaacefad0c5d0f", optional = true }

[features]
# RFC v2 §2 Track P: route curated call families through raw syscalls
# (rusty_libc) instead of libc. Off by default; D-2 keeps libc the floor.
track-p = ["dep:rusty_libc"]

[dev-dependencies]
platform-mock.workspace = true

[lints]
workspace = true
