[package]
name = "platform-macos"
description = "macOS/BSD backend (net-only slice, rustils#48): platform::net over libc, mirroring platform-linux's layering."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
platform.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[dev-dependencies]
platform-mock.workspace = true

[lints]
workspace = true
