[package]
name = "platform-mock"
description = "In-memory backend implementing every platform trait — the injectable test double (RFC v2 §4.1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
platform.workspace = true

[lints]
workspace = true
